# recepts

./: db.db  db.py  main.py  pyproject.toml
sqlite_simple/: __init__.py  callback.py  simplifer.py
templates/: main.html  new_recept_by_text.html  recept.html
